; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_PrintCvarMatches.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_PrintCvarMatches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUNCATE_LENGTH = common dso_local global i32 0, align 4
@shortestMatch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"    %s = \22%s\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @PrintCvarMatches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PrintCvarMatches(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @TRUNCATE_LENGTH, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %3, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %4, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = load i32, i32* @shortestMatch, align 4
  %11 = load i32, i32* @shortestMatch, align 4
  %12 = call i32 @strlen(i32 %11)
  %13 = call i32 @Q_stricmpn(i8* %9, i32 %10, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %1
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @Cvar_VariableString(i8* %16)
  %18 = call i32 @Com_TruncateLongString(i8* %8, i32 %17)
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @Com_Printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %19, i8* %8)
  br label %21

21:                                               ; preds = %15, %1
  %22 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %22)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Q_stricmpn(i8*, i32, i32) #2

declare dso_local i32 @strlen(i32) #2

declare dso_local i32 @Com_TruncateLongString(i8*, i32) #2

declare dso_local i32 @Cvar_VariableString(i8*) #2

declare dso_local i32 @Com_Printf(i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
